packages/genesys-spark-components/src/components/beta/gux-day/gux-day.scss
@use '~genesys-spark/dist/scss/mixins.scss';

:host {
  display: inline-block;
  inline-size: var(--gse-ui-calendarMenu-day-date-size);
  block-size: var(--gse-ui-calendarMenu-day-input-height);
  outline: none;
  border: none;
  border-radius: var(--gse-ui-calendarMenu-month-borderRadius);
}

:host(:hover) {
  background-color: var(--gse-ui-calendarMenu-date-hover-backgroundColor);
}

:host(:focus-within) {
  outline: var(
      --gse-semantic-focusRing-default-border-width,
      var(--gse-semantic-focusOutline-md-borderWidth)
    )
    solid
    var(
      --gse-semantic-focusRing-default-border-color,
      var(--gse-semantic-border-focus)
    );
  border-radius: var(--gse-ui-calendarMenu-month-focusBorderRadius);
}

:host([gux-selected]) {
  color: var(--gse-ui-calendarMenu-date-selected-foregroundColor);
  background-color: var(--gse-ui-calendarMenu-date-selected-backgroundColor);
}

:host([aria-disabled='true']),
:host(.gux-muted) {
  opacity: var(--gse-ui-calendarMenu-disabled-opacity);
}

button {
  // The button should have no default styles
  @include mixins.gux-empty-button;

  inline-size: 100%;
  block-size: 100%;
  font-family: var(--gse-ui-calendarMenu-date-currentText-fontFamily);
  font-size: var(--gse-ui-calendarMenu-date-defaultText-fontSize);
  font-style: normal;
  font-weight: var(--gse-ui-calendarMenu-date-defaultText-fontWeight);
  line-height: 32px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
}

button:focus {
  // The button should not have a focus outline, it is handled with :focus-within
  // on :host
  outline: none;
}

.gux-sr-only {
  @include mixins.gux-sr-only-clip;
}

